src/objects/Location__c.object
<CustomObject>
    <description>Recruiting App</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Map__c</fullName>
        <description>Map of the Location of the position</description>
        <formula>HYPERLINK( &apos;http://&apos;  &amp; Location_URL__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Map of the Location of the position</inlineHelpText>
        <label>Location Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_URL__c</fullName>
        <description>Location_Map</description>
        <label>Location URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>